test(controller): add unit tests for controller
Tests were added for controller method requests and several method names were changed.
